--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -1,8 +1,54 @@
-body{
-    background-color: cyan;
+:root{
+    --branding-color:#6C63FF;
+    --headind-font-family:"Playfair Display",serif;
+    --default-font-family:"Poppins",sans-serif;
+    --secondary-color: #F9F7FE;
 }
+body{
+    font-family: var(--default-font-family);
+}
+
 h1{
     color:black;
-    font-family: "Playfair Display", serif;
-    font-weight: bold;
+    font-family:var(--headind-font-family);
+    font-weight: 700;
+    font-size: 96px;
+    line-height: 127.97px;
+}
+.hero{
+    text-align: center;
+    background-color:var(--secondary-color);
+    padding:160px 0px;
+
+
+}
+.hero p{
+
+font-family:var(--default-font-family);
+font-size: 36px;
+line-height: 54px;
+font-weight: 700;
+color: #272142;
+
+
+
+}
+.hero h2{
+    font-family:var(--default-font-family);
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 36px;
+
+}
+.btn-branding{
+font-family:var(--default-font-family);
+font-size: 18px;
+font-weight: 500;
+line-height: 27px;
+color: white;
+background:var(--branding-color);
+padding: 18px 30px;
+border-radius: 4px;
+
+
 }
