--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -52,3 +52,44 @@ border-radius: 4px;
 
 
 }
+p{
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 27px;
+
+}
+h2{
+    font-family:var(--headind-font-family) ;
+    font-weight: 700;
+    font-size: 64px;
+    line-height: 85.31px;
+}
+.btn-branding-outline{
+  color: var(--branding-color);
+  border-radius: 4px; 
+  border: 1px solid var(--branding-color);
+  font-size: 18px; 
+  line-height: 27px;
+  padding: 18px 30px;
+}
+.project-description{
+    padding:120px 60px;
+}
+@media (max-width:900px) {
+  .project-description{
+    padding:0;
+    text-align: center;
+  }
+  h1{
+font-size: 44px;
+  } 
+  h2{
+    font-size: 44px;
+    line-height: 1.5;
+    
+  } 
+  .hero{
+    padding:80px 20px;
+  }
+
+}
