--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -20,7 +20,6 @@ h1{
     background-color:var(--secondary-color);
     padding:160px 0px;
 
-
 }
 .hero p{
 
@@ -30,8 +29,6 @@ line-height: 54px;
 font-weight: 700;
 color: #272142;
 
-
-
 }
 .hero h2{
     font-family:var(--default-font-family);
@@ -39,6 +36,25 @@ color: #272142;
     font-size: 24px;
     line-height: 36px;
 
+}
+.about-section{
+  padding:160px 20px;
+  text-align: center;
+}
+.about-section h1{
+  font-size: 64px;
+  line-height: 1.5;
+}
+.about-section h2{
+  font-size:18px ;
+  font-family: var(--default-font-family);
+
+}
+.about-section-content{
+  margin: 30px;
+}
+.about-section img{
+  border-radius: 10px;
 }
 .btn-branding{
 font-family:var(--default-font-family);
@@ -54,8 +70,8 @@ border-radius: 4px;
 }
 p{
     font-weight: 400;
-    font-size: 18px;
-    line-height: 27px;
+    font-size: 16px;
+    line-height: 30px;
 
 }
 h2{
