--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -37,20 +37,30 @@ color: #272142;
     line-height: 36px;
 
 }
-.about-section{
+.content-container{
   padding:160px 20px;
   text-align: center;
 }
-.about-section h1{
+.content-container h1{
   font-size: 64px;
   line-height: 1.5;
 }
-.about-section h2{
+.content-container h2{
   font-size:18px ;
   font-family: var(--default-font-family);
 
 }
-.about-section-content{
+.content h3{
+  font-size: 18px;
+  line-height: 1.5;
+  
+  font-family: var(--default-font-family);
+}
+.content p{
+  font-size: 14px;
+
+}
+.content{
   margin: 30px;
 }
 .about-section img{
