--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -113,6 +113,9 @@ font-size: 44px;
     font-size: 44px;
     line-height: 1.5;
     
+  }
+  h4{
+    font-size: 48px;
   } 
   .hero{
     padding:80px 20px;
@@ -144,4 +147,38 @@ nav a{
 nav li.active a,
 nav a:hover{
   color: var(--branding-color);
+}
+footer .contact-box{
+  background: var(--secondary-color);
+  padding: 30px 120px; 
+  border-radius: 10px ;
+}
+footer .contact-box p{
+  margin: 0;
+}
+footer{
+  margin: 40px 0;
+}
+footer .email-link{
+  text-decoration: none;
+  color: black;
+  font-size: 24px;
+  
+}
+footer .email-link:hover{
+  color: var(--branding-color);
+}
+footer .social-links a{
+  margin: 0 20px;
+  color: var(--branding-color);
+  background: var(--secondary-color);
+  padding: 10px;
+  font-size: 18px;
+  border-radius: 50%;
+  transition: all 150ms ease-in-out;
+
+}
+footer .social-links a:hover{
+  color: white;
+  background-color: var(--branding-color);
 }
