--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -18,7 +18,7 @@ h1{
 .hero{
     text-align: center;
     background-color:var(--secondary-color);
-    padding:160px 0px;
+    padding:80px 20px;
 
 }
 .hero p{
@@ -38,7 +38,7 @@ color: #272142;
 
 }
 .content-container{
-  padding:160px 20px;
+  padding:60px 20px;
   text-align: center;
 }
 .content-container h1{
@@ -62,6 +62,7 @@ color: #272142;
 }
 .content{
   margin: 30px;
+  
 }
 .about-section img{
   border-radius: 10px;
@@ -114,12 +115,15 @@ font-size: 44px;
     line-height: 1.5;
     
   }
-  h4{
-    font-size: 48px;
-  } 
   .hero{
-    padding:80px 20px;
+    padding: 80px 20px;
   }
+  
+  .content{
+    text-align: center;
+    padding: 0;
+  }
+
 
 }
 .logo{
